# spion

./: .gitignore  GUIDE.md  LICENSE  README.md  TEST_LOG.md  __init__.py  clean.sh  config.py  demon_stration.py  filters.py  pyproject.toml  utils.py
decorators/: __init__.py  base.py  chain.py  relationship.py  simple.py
spion/: __init__.py  config.py
spion/decorators/: __init__.py  chain.py  relationship.py  simple.py
spion/decorators/base/: __init__.py  composer.py  context.py  decorator.py  metadata.py
spion/decorators/core/: __init__.py  context.py  filtering.py  signature.py  stats.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_config_environments.py  test_context_manager.py  test_filters.py  test_final.py  test_guide_examples.py  test_minimal_config.py  test_real_integration.py  test_utils.py  test_with_capsys.py
tests/test_decorators/: test_base.py  test_chain.py  test_chain_advance.py  test_context.py  test_decorator_advance.py  test_filters.py  test_final_coverage.py  test_final_strike.py  test_imports.py  test_integration.py  test_metadata.py  test_relationship.py  test_signature.py  test_simple.py  test_stats.py  test_sugar.py
